fix: bottom overflow in only hide tabbar mode

--- a/themes/5941aefd-67b0-453d-9b62-9071a31cbb0d/chrome.css
+++ b/themes/5941aefd-67b0-453d-9b62-9071a31cbb0d/chrome.css
@@ -10,5 +10,11 @@
   :root[zen-compact-mode="true"] #navigator-toolbox {
     top: calc((100vh - var(--theme-smaller_compact_mode-sidebar_height)*1vh)/2) !important;
     height: calc(var(--theme-smaller_compact_mode-sidebar_height) * 1vh) !important;
+
+    @media not (-moz-bool-pref: "zen.view.compact.hide-toolbar") {
+      & {
+        height: calc(var(--theme-smaller_compact_mode-sidebar_height) * 1vh - var(--zen-toolbar-height-with-bookmarks)) !important;
+      }
+    }
   }
 }
